--- a/Reso/Reso/Detail.storyboard
+++ b/Reso/Reso/Detail.storyboard
@@ -112,30 +112,46 @@
                                                                                 <constraint firstAttribute="width" constant="250" id="aUF-yY-uok"/>
                                                                                 <constraint firstAttribute="height" constant="20" id="lhK-hl-5EQ"/>
                                                                             </constraints>
-                                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="12"/>
+                                                                            <color key="textColor" red="1" green="1" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oek-Mb-NHY" userLabel="userCommentLabel">
-                                                                            <rect key="frame" x="63" y="25" width="250" height="20"/>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oek-Mb-NHY" userLabel="userCommentLabel">
+                                                                            <rect key="frame" x="63" y="25" width="529" height="27"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="20" id="6u2-gb-elF"/>
                                                                                 <constraint firstAttribute="width" constant="250" id="nyA-PM-wNC"/>
                                                                             </constraints>
-                                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="13"/>
+                                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                             <nil key="highlightedColor"/>
+                                                                            <variation key="default">
+                                                                                <mask key="constraints">
+                                                                                    <exclude reference="6u2-gb-elF"/>
+                                                                                    <exclude reference="nyA-PM-wNC"/>
+                                                                                </mask>
+                                                                            </variation>
                                                                         </label>
                                                                     </subviews>
                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                     <constraints>
                                                                         <constraint firstItem="iXw-9L-wyS" firstAttribute="leading" secondItem="Sg1-Gy-Hx0" secondAttribute="leading" constant="8" id="0YM-0i-Hud"/>
+                                                                        <constraint firstAttribute="bottomMargin" secondItem="Oek-Mb-NHY" secondAttribute="bottom" id="8Df-ET-lZP"/>
+                                                                        <constraint firstAttribute="trailingMargin" secondItem="Oek-Mb-NHY" secondAttribute="trailing" id="LpF-aM-MKJ"/>
                                                                         <constraint firstItem="Oek-Mb-NHY" firstAttribute="leading" secondItem="iXw-9L-wyS" secondAttribute="trailing" constant="15" id="VUB-Iq-SY8"/>
+                                                                        <constraint firstAttribute="trailingMargin" secondItem="Oek-Mb-NHY" secondAttribute="trailing" id="Xea-yr-ZEu"/>
                                                                         <constraint firstItem="MDU-bv-eH1" firstAttribute="leading" secondItem="iXw-9L-wyS" secondAttribute="trailing" constant="10" id="b6h-r8-2TC"/>
                                                                         <constraint firstItem="iXw-9L-wyS" firstAttribute="centerY" secondItem="Sg1-Gy-Hx0" secondAttribute="centerY" id="bOA-02-0br"/>
                                                                         <constraint firstItem="Oek-Mb-NHY" firstAttribute="top" secondItem="MDU-bv-eH1" secondAttribute="bottom" id="ciW-UO-Llg"/>
                                                                         <constraint firstItem="MDU-bv-eH1" firstAttribute="top" secondItem="Sg1-Gy-Hx0" secondAttribute="top" constant="5" id="tTQ-ai-idl"/>
+                                                                        <constraint firstAttribute="height" secondItem="MDU-bv-eH1" secondAttribute="height" id="zwv-vg-DPC"/>
                                                                     </constraints>
+                                                                    <variation key="default">
+                                                                        <mask key="constraints">
+                                                                            <exclude reference="zwv-vg-DPC"/>
+                                                                            <exclude reference="LpF-aM-MKJ"/>
+                                                                        </mask>
+                                                                    </variation>
                                                                 </tableViewCellContentView>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                 <connections>
@@ -333,8 +349,8 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Vjy-iS-RRb" userLabel="Question One Stack View">
                                         <rect key="frame" x="0.0" y="120" width="560" height="56"/>
                                         <subviews>
-                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hQR-jc-gAO" userLabel="questionOneButton">
-                                                <rect key="frame" x="0.0" y="0.0" width="53" height="54"/>
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hQR-jc-gAO" userLabel="questionOneButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
                                                 <color key="backgroundColor" red="0.98039215686274506" green="0.88235294117647056" blue="0.25098039215686274" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="hQR-jc-gAO" secondAttribute="height" multiplier="1:1" id="gMc-gA-bn6"/>
@@ -355,10 +371,10 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ni9-7g-afm" userLabel="Question One Stack View">
-                                        <rect key="frame" x="0.0" y="180" width="560" height="55"/>
+                                        <rect key="frame" x="0.0" y="180" width="560" height="56"/>
                                         <subviews>
-                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JN7-3v-Dzf" userLabel="questionOneButton">
-                                                <rect key="frame" x="0.0" y="0.0" width="54" height="54"/>
+                                            <button opaque="NO" tag="2" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JN7-3v-Dzf" userLabel="questionOneButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
                                                 <color key="backgroundColor" red="0.24313725490196078" green="0.8666666666666667" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="JN7-3v-Dzf" secondAttribute="height" multiplier="1:1" id="ZUX-3e-jBN"/>
